2006-02-07  Aaron Bockover  <aaron@aaronbock.net>

	* src/Banshee.Plugins/Audioscrobbler/AudioscrobblerPlugin.cs
	(StartEngine): Only instantiate the engine if it is null

2006-02-07  Aaron Bockover  <aaron@aaronbock.net>

	* src/Banshee.Widgets/NotificationAreaIcon.cs: Updated with fixes
	for AMD64 by Dan Winship (from Beagle, #327944); class renamed from
	NotificationAreaIcon to NotificationArea

	* src/Banshee.Widgets/NotificationAreaIcon.cs: Reflect change from
	NotificationAreaIcon to NotificationArea

	* src/PlayerInterface.cs:
	* src/PlaylistColumns.cs:
	* src/PlaylistView.cs: Patch from Ruben Vermeersch to fix column
	visibility bug (#326947)

	* src/AboutBox.cs: Added Theppitak Karoonboonyana to translator credits

2006-02-07  James Willcox  <snorp@snorp.net>

	* src/Banshee.Plugins/Daap/DaapCore.cs: avoid a null ref exception
	in the ServerName property when there is no server.

2006-02-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Added 'th' (Thai) to ALL_LINGUAS.

2006-02-06  Aaron Bockover  <aaron@aaronbock.net>

	* src/Banshee.Base/Utilities (Utilities.SetProcessName): NUL terminate
	the process name as ASIIEncoding does not do this (sigh)

2006-02-06  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Bumped version to 0.10.5

	* NEWS: Updated for 0.10.5 release notes

	* banshee.mdp: Updated MonoDevelop project

	* docs/*: Updated Monodoc documentation

	* src/AboutBox.cs: Added Fredrik

2006-02-06  Aaron Bockover  <aaron@aaronbock.net>

	* data/data/UIManagerLayout.xml: Removed seek and repeat menu items
	from tray menu

	* src/PlayerInterface.cs: Do not focus search on s/j press if source
	view is in edit mode (BGO #329540)

	* src/Banshee.Base/Utilities.cs (PathUtil.CharsToQuote): Do not 
	escape ' ' characters as they cause problems with importing

	* src/banshee.in: Run mono --debug if --debug is passed to wrapper

	* src/RemotePlayer.cs:
	* src/Main.cs: Add remote support for querying the cover art 